--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,11 +1,1 @@
-server.port=5050
-
-spring.jpa.database=mysql
-spring.jpa.hibernate.ddl-auto=update
-spring.jpa.hibernate.use-new-id-generator-mappings=false
-
-spring.datasource.url=jdbc:mysql://localhost:3306/learnsageway_dev
-spring.datasource.username=root
-spring.datasource.password=root
-
-#spring.jpa.show-sql: true
+spring.profiles.active=dev
